2007-12-13 Denis Barbier <barbier@linuxfr.org>

	* src/meshconvert/generic.py
	  src/meshconvert/mesh.py
	  src/meshconvert/unv.py: Add an optional 'string' argument to
	__init__() to allow using StringIO.
	* src/meshconvert/tests: Initial support for unit tests.
	* src/meshconvert/mesh.py
	  src/meshconvert/vtk.py: Use tempfile module for temporary files.

2007-12-12 Denis Barbier <barbier@linuxfr.org>

	* src/meshconvert/generic.py (getline): Blank lines
	were treated as EOF.
	* src/meshconvert/mesh.py: Add a simple reader, it only
	accepts triangles.

2007-12-07 Denis Barbier <barbier@linuxfr.org>

	* scripts/meshconvert: Replace getopt by optparse.

2007-12-06 Denis Barbier <barbier@linuxfr.org>

	* Project created on code.google.com